[package]
name = "fast-google"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.16.0"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.17.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
